Fix UX icons not appearing on Safari

--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -67,6 +67,7 @@
             display: block;
             max-height: $size-l;
             max-width: $size-l;
+            width: 100%;
           }
         }
         p {
